--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Where-in-the-world-angular": {
+    "where-in-the-world-angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -67,10 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Where-in-the-world-angular:build:production"
+              "buildTarget": "where-in-the-world-angular:build:production"
             },
             "development": {
-              "buildTarget": "Where-in-the-world-angular:build:development"
+              "buildTarget": "where-in-the-world-angular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -78,7 +78,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "Where-in-the-world-angular:build"
+            "buildTarget": "where-in-the-world-angular:build"
           }
         },
         "test": {
@@ -95,10 +95,28 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "where-in-the-world-angular:build:production",
+              "serveTarget": "where-in-the-world-angular:serve:production"
+            },
+            "development": {
+              "buildTarget": "where-in-the-world-angular:build:development",
+              "serveTarget": "where-in-the-world-angular:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
